fix: Fixing error scrollbar

--- a/src/components/FormDesign/style.module.css
+++ b/src/components/FormDesign/style.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   margin-top: 16px;
+  min-height: 180px;
 }
 
 .formDesign fieldset{
